<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoSalario">

    <TextView
        android:id="@+id/lblTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblTitulo"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblInformacoesResultado"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/hintLblInformacoesResultado"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloResultado" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInformacoesResultado">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblSlarioLiquido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintLblSlarioLiquido"
                android:text="@string/lblSalarioLiquido"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSalarioLiquido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintTxtSalarioLiquido"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblDesconto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintLblDesconto"
                android:text="@string/lblDesconto"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDesconto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintTxtDesconto"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblPercentual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintLblPercentual"
                android:text="@string/lblPercentual"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPercentual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintTxtPercentual"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/hintBtnVoltar"
        android:text="@string/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>